--- a/index.html
+++ b/index.html
@@ -389,12 +389,13 @@
         }
         
         .page-btn {
-            padding: 8px 12px;
+            padding: 5px;
             background-color: #3498db;
             color: white;
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            font-size: 12px;
             transition: background-color 0.3s;
         }
         
