--- a/index.html
+++ b/index.html
@@ -233,7 +233,6 @@
         
         /* 标签页样式 */
         .tab-container {
-            margin: 20px 0;
             width: 100%;
         }
         
@@ -503,10 +502,24 @@
             }
             .page-btn {
                 padding: 5px;
+                font-size: 12px;
+            }
+            #preciseSearchBtn,#searchInput{
+                font-size: 14px;
+                height: 40px;
+                transition: 0.3s all;
             }
             table th,td{
                 padding: 6px;
                 transition: all 0.3s;
+            }
+            .control-panel{
+                padding: 10px;
+                gap: 10px;
+                margin-bottom: 10px;
+            }
+            .mode-toggle-container,table{
+                margin-top: 10px;
             }
         }
     </style>
