--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 
         /* 小屏显示 */
         @media (max-width: 600px) {
-            .page-btn,.tab-button {
+            .page-btn,.tab-button,.page-size-select{
                 padding: 5px;
                 font-size: 12px;
             }
@@ -522,7 +522,7 @@
                 margin-top: 10px;
             }
             .pagination-container{
-                padding: 10px;
+                padding: 10px 0;
             }
             .mode-toggle-container{
                 gap:0px;
