--- a/index.html
+++ b/index.html
@@ -527,6 +527,9 @@
             .mode-toggle-container{
                 gap:0px;
             }
+            .file-selection{
+                display: none;
+            }
         }
     </style>
 </head>
